# m25-napari

./: .gitignore  CITATION.cff  LICENSE  LICENSE.md  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/scripts/: start_napari_m25_basler.bat  turn_M25_cameras.bat
notebooks/: SKELETON_0507_ZW495_9.ipynb  SKELETON_0508_ZW495_26.ipynb  ZW495_9_Analysis.ipynb  ZW495_9_testing_moreplanes.ipynb  analysis_utils.py  pytrack_play_2.ipynb  read_raw.ipynb  template_matching.ipynb  test_boxes2.ipynb  test_calibration.ipynb  test_cropPSF.ipynb  test_inFocus.ipynb  test_ometiffReader.ipynb  test_open_tiff.ipynb  test_pycudadecon.ipynb  test_pydecon.ipynb  test_pytrack.ipynb  test_sift.ipynb  test_skeleton copy.ipynb  test_skeleton.ipynb  test_timelapse_analysis.ipynb  visual.py
notebooks/data_analysis/: 20220404_MFGno11_lowIndex copy.ipynb  20220404_MFGno2_nideal.ipynb  20220404_MFGno6_highIndex.ipynb  20220405_PSF_Calibration.ipynb  20220405_agarPad_larvae.ipynb  20220405_celegans.ipynb  20220412_Beads.ipynb  20220412_celegans_beads.ipynb  20220413_celegans_100fps.ipynb  20220427_PSF_Calibration.ipynb  20220429_celegans_MBL_608img copy.ipynb  20220429_celegans_MBL_608img.ipynb  20220429_celegans_MBL_test.ipynb  20220429_pyimagej.ipynb  20220512_zarrProcessing.ipynb  M25_processing copy 2.ipynb  M25_processing copy.ipynb  M25_processing.ipynb  convert_align_datasets_608.ipynb  ometiffReader_PSF_mmc.ipynb
notebooks/psf_analysis/: M25_bestFocus_radial.ijm  Plotting PSFs.ipynb  test_PSFfit.ipynb
src/visualizer/: __init__.py  _app.py  _constants.py  _widgetFunctions.py  calibration.py  napari.yml
src/visualizer/Qt/: M25GUI.py  M25_Widget2_logger.ui  M25_stage.ui  pyqt2python.txt
src/visualizer/_tests/: test_napariPlugin.ipynb  test_widget.py
tests/: test_napariPlugin.ipynb
