[build-system]
requires = ["setuptools>=42.0", 
    "wheel",
    "tifffile",
    "napari>=0.4.13",
    "numpy",
    "zarr",
    "cupy-cuda11x",
    "sphinx"]
build-backend = "setuptools.build_meta"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "src/visualizer/_tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true