[metadata]
name = m25-napari
version = 0.0.1
author = Eduardo Hirata-Miyasaki
author_email = edhirata@ucsc.edu
url = https://github.com/SaraLab-Group/m25-napari
license = BSD-3-Clause
description = M25 Controls and volumetric image analyisis
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/SaraLab-Group/m25-napari/issues
    Documentation = https://github.com/SaraLab-Group/m25-napari#README.md
    Source Code = https://github.com/SaraLab-Group/m25-napari
    User Support = https://github.com/SaraLab-Group/m25-napari/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
M25_napari = 
    napari.yml

[options.entry_points] 
napari.manifest = 
    M25_napari = visualizer:napari.yml
